# ansys-cdb-parser

./: .gitignore  CMakeLists.txt  FINAL_REPORT.md  GITHUB_SETUP.md  LICENSE  MANUAL_PUSH.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.sh  README.md  RELEASE_v1.0.md  RELEASE_v1.1.md  SETUP_GH.md  TEST_COVERAGE.md  create_and_push.sh  gh_create_repo.sh
docs/: BENCHMARK_TESTS.md  CDB_COMMANDS_REFERENCE.md  CLEANUP_v1.5.md  COMMAND_SUMMARY.txt  FAQ.md  FEATURE_SUPPORT.md  OPTIMIZATION_REPORT.md  PERFORMANCE_SUMMARY.md  PHASE6_COMPLETE.md  PHASE7_BOUNDARY_CONDITIONS.md  PHASE8_MATERIAL_PROPERTIES.md  PHASE9_SINGLE_COMMANDS.md  PROJECT_COMPLETE.md  REFACTORING_v1.4.md  TEST_SUMMARY_v1.2.md  UNSUPPORTED_FEATURES.md
examples/: CMakeLists.txt  simple_read.cpp
include/: archive.h  boundary_condition.h  component.h  element.h  material_property.h  node.h  parser.h  types.h
include/ansys_cdb/: archive.h  component.h  element.h  node.h  parser.h  types.h
scripts/: generate_large_cdb.py
src/: archive.cpp  component.cpp  element.cpp  node.cpp  parser.cpp
tests/: CMakeLists.txt  test_additional_files.cpp  test_benchmark.cpp  test_boundary_conditions.cpp  test_components.cpp  test_element_types.cpp  test_elements.cpp  test_material_properties.cpp  test_multi_material.cpp  test_nodes.cpp  test_parser.cpp  test_performance.cpp  test_phase6_extended.cpp  test_realconstants.cpp  test_single_commands.cpp
tests/data/: boundary_conditions.cdb  material_properties.cdb  medium_10k.cdb  single_node_element.cdb
